# cold-storage-unified

./: .code-review-graphignore  .gitignore  AWS_ACCOUNT_CREATION_GUIDE.md  DNS_INSTRUCTIONS_SMAATECH.md  DR_RUNBOOK.md  ENGINEERING_HANDOFF.md  IOT_HTTPS_HANDOFF.md  IT_FREELANCER_SETUP_TRACKER.md  LOCAL_SETUP_AND_RUN.md  PROJECT_BRAIN.md  PROJECT_MASTER_LOG.md  PROJECT_ULTIMATE_BRAIN.md  QUICK_START_VSCODE.md  README.md  RESOLVE_SAFE_PATH.md  USER_GUIDE.md  acm_details.json  acm_full_status.json  acm_list.json  acm_status_poll_final.txt  acm_summary.json  all_buckets.txt  all_cf_details.json  all_files_list.txt  amplify_apps.json  backup_site.ps1  bridge_fix.js  bridge_fix.py  bucket_policy.json  cert_full.json  cf_all_json.txt  cf_config.json  cf_config_actual.json  cf_deployment_result.json  cf_domain.txt  cf_final_config.json  cf_final_payload.json  cf_full.json  cf_full_config.json  cf_list.txt  (+60 more)
Project_Pitch_Documents/: Complete Client Handoff Guide.md  Freelancer Client Interview Guide.md  Sundar Pichai Project Pitch.md
android/: settings.gradle.kts
backend/: .dockerignore  Dockerfile  alembic.ini  alembic_error.txt  alembic_output.txt  alembic_utf8.txt  backend_logs.txt  check_map_data.py  debug_auth.py  full_backend_logs.txt  get_hash.py  get_org.py  pyproject.toml  seed.py  simulate_device.py  temp_seed_device.py  test_mqtt_sub.py  update_user.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_missing_tables.py  0003_seed_production_org.py  7ac84b9e79da_add_ota_and_firmware_models.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: alert_rules.py  alerts.py  audit.py  auth.py  commands.py  contact.py  dashboard.py  devices.py  dispatch.py  gateways.py  inventory.py  notifications.py  produce.py  readings.py  reports.py  roles.py  router.py  stream.py  work_orders.py
backend/app/api/v1/admin/: ota.py  users.py
backend/app/auth/: jwt.py  mfa.py  rbac.py  security.py
backend/app/db/: session.py
backend/app/middleware/: __init__.py  audit_log.py  request_id.py
backend/app/models/: alert.py  alert_rule.py  audit_log.py  base.py  command_audit.py  device.py  dispatch.py  gateway.py  inventory.py  notification.py  ota.py  produce.py  sensor_reading.py  settings.py  user.py  work_order.py
backend/app/mqtt/: client.py  topics.py
backend/app/schemas/: device.py  operations.py  ota.py  reading.py  user.py
backend/app/services/: stream.py
backend/app/workers/: alert_evaluator.py  celery_app.py  ingest.py  notification_dispatcher.py  ota_publisher.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_dashboard.py  test_devices.py  test_protected_routes.py  test_rbac.py  test_reports.py
careers/: server.js  (+8 more)
(+156 files in other folders)
